// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`calculateTreePrices updates the prices for a tree 1`] = `
Object {
  "buyPrice": 123,
  "buyPriceEach": 123,
  "components": Array [
    Object {
      "buyPrice": 1,
      "buyPriceEach": 1,
      "components": undefined,
      "decisionPrice": 1,
      "disciplines": Array [],
      "id": 2,
      "min_rating": null,
      "output": 1,
      "quantity": 1,
      "totalQuantity": 1,
      "type": "Item",
      "usedQuantity": 1,
    },
    Object {
      "buyPrice": 4,
      "buyPriceEach": 2,
      "components": undefined,
      "decisionPrice": 4,
      "disciplines": Array [],
      "id": 3,
      "min_rating": null,
      "output": 1,
      "quantity": 2,
      "totalQuantity": 2,
      "type": "Item",
      "usedQuantity": 2,
    },
    Object {
      "buyPrice": 10,
      "buyPriceEach": 1,
      "components": undefined,
      "decisionPrice": 10,
      "disciplines": Array [],
      "id": 1,
      "min_rating": null,
      "output": 1,
      "quantity": 10,
      "totalQuantity": 10,
      "type": "Currency",
      "usedQuantity": 10,
    },
    Object {
      "buyPrice": false,
      "buyPriceEach": false,
      "components": undefined,
      "decisionPrice": false,
      "disciplines": Array [],
      "id": 2,
      "min_rating": null,
      "output": 1,
      "quantity": 10,
      "totalQuantity": 10,
      "type": "Currency",
      "usedQuantity": 10,
    },
  ],
  "craftPrice": 15,
  "decisionPrice": 15,
  "disciplines": Array [],
  "id": 1,
  "min_rating": null,
  "output": 1,
  "quantity": 1,
  "totalQuantity": 1,
  "type": "Recipe",
  "usedQuantity": 1,
}
`;

exports[`calculateTreePrices updates the prices for a tree with flags correctly 1`] = `
Object {
  "buyPrice": 123,
  "buyPriceEach": 123,
  "components": Array [
    Object {
      "buyPrice": 1,
      "buyPriceEach": 1,
      "components": undefined,
      "craft": false,
      "decisionPrice": 1,
      "disciplines": Array [],
      "id": 2,
      "min_rating": null,
      "output": 1,
      "quantity": 1,
      "totalQuantity": 1,
      "type": "Item",
      "usedQuantity": 1,
    },
    Object {
      "buyPrice": 4,
      "buyPriceEach": 2,
      "components": undefined,
      "craft": false,
      "decisionPrice": 4,
      "disciplines": Array [],
      "id": 3,
      "min_rating": null,
      "output": 1,
      "quantity": 2,
      "totalQuantity": 2,
      "type": "Item",
      "usedQuantity": 2,
    },
  ],
  "craft": false,
  "craftPrice": 5,
  "decisionPrice": 123,
  "disciplines": Array [],
  "id": 1,
  "min_rating": null,
  "output": 1,
  "quantity": 1,
  "totalQuantity": 1,
  "type": "Recipe",
  "usedQuantity": 1,
}
`;

exports[`calculateTreePrices updates the prices for a tree with missing buy prices 1`] = `
Object {
  "buyPrice": 123,
  "buyPriceEach": 123,
  "components": Array [
    Object {
      "buyPrice": 1,
      "buyPriceEach": 1,
      "components": undefined,
      "decisionPrice": 1,
      "disciplines": Array [],
      "id": 2,
      "min_rating": null,
      "output": 1,
      "quantity": 1,
      "totalQuantity": 1,
      "type": "Item",
      "usedQuantity": 1,
    },
    Object {
      "buyPrice": 4,
      "buyPriceEach": 2,
      "components": Array [
        Object {
          "buyPrice": false,
          "buyPriceEach": false,
          "components": undefined,
          "decisionPrice": false,
          "disciplines": Array [],
          "id": 4,
          "min_rating": null,
          "output": 1,
          "quantity": 50,
          "totalQuantity": 50,
          "type": "Item",
          "usedQuantity": 50,
        },
        Object {
          "buyPrice": 20,
          "buyPriceEach": 10,
          "components": undefined,
          "decisionPrice": 20,
          "disciplines": Array [],
          "id": 5,
          "min_rating": null,
          "output": 1,
          "quantity": 2,
          "totalQuantity": 2,
          "type": "Item",
          "usedQuantity": 2,
        },
      ],
      "craftPrice": 20,
      "decisionPrice": 4,
      "disciplines": Array [],
      "id": 3,
      "min_rating": null,
      "output": 1,
      "quantity": 2,
      "totalQuantity": 2,
      "type": "Recipe",
      "usedQuantity": 2,
    },
  ],
  "craftPrice": 5,
  "decisionPrice": 5,
  "disciplines": Array [],
  "id": 1,
  "min_rating": null,
  "output": 1,
  "quantity": 1,
  "totalQuantity": 1,
  "type": "Recipe",
  "usedQuantity": 1,
}
`;
